version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/DataModel/Enums/RBDTimeIntegrationType.rst.txt
.. vale off



:class:`RBDTimeIntegrationType`
===============================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.Mechanical.DataModel.Enums.RBDTimeIntegrationType

   Bases: :py:obj:`enum.Enum`


   
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: RBDTimeIntegrationType

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~GeneralizedAlpha`
            - 
          * - :py:attr:`~HalfExplicitMethod5`
            - 
          * - :py:attr:`~HybridIntegration`
            - 
          * - :py:attr:`~NonSmoothGeneralizedAlpha`
            - 
          * - :py:attr:`~PredictEvaluateCorrect`
            - 
          * - :py:attr:`~ProgramControlled`
            - 
          * - :py:attr:`~RungeKutta4`
            - 
          * - :py:attr:`~RungeKutta5`
            - 
          * - :py:attr:`~RungeKuttaBogackiShampine3`
            - 
          * - :py:attr:`~RungeKuttaDormandPrince5`
            - 
          * - :py:attr:`~RungeKuttaHeunEuler2`
            - 
          * - :py:attr:`~StabilizedGeneralizedAlpha`
            - 
          * - :py:attr:`~TimeSteppingNSCD`
            - 








Attribute detail
----------------
.. py:attribute:: GeneralizedAlpha
   :value: 6


.. py:attribute:: HalfExplicitMethod5
   :value: 2


.. py:attribute:: HybridIntegration
   :value: 8


.. py:attribute:: NonSmoothGeneralizedAlpha
   :value: 12


.. py:attribute:: PredictEvaluateCorrect
   :value: 11


.. py:attribute:: ProgramControlled
   :value: 9


.. py:attribute:: RungeKutta4
   :value: 0


.. py:attribute:: RungeKutta5
   :value: 1


.. py:attribute:: RungeKuttaBogackiShampine3
   :value: 5


.. py:attribute:: RungeKuttaDormandPrince5
   :value: 3


.. py:attribute:: RungeKuttaHeunEuler2
   :value: 4


.. py:attribute:: StabilizedGeneralizedAlpha
   :value: 10


.. py:attribute:: TimeSteppingNSCD
   :value: 7






.. vale on